Fix oveflow of speakerContainer img on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -189,7 +189,7 @@ body {
 	}
 
 	.speakerContainer img {
-		height: 50vh;
+		height: 40vh;
 	}
 
 	.infoSection {
